syntax = "proto2";

package apollo.data.fuel;

// TODO(all): We can collect data easily from internal and external clients by
// enforcing them to provide BosConfig through our interface, such as a secured
// HTTP form which is human friendly, or GRPC which is program friendly.

// This config will mainly be used by bosfs. Check
// https://cloud.baidu.com/doc/BOS/BOSCLI.html#BOS.20FS for more information.
message BosConfig {
  optional string bucket = 1;
  optional string endpoint = 2 [default = "http://bj.bcebos.com"];
  optional string access_key = 3;
  optional string secret_key = 4;
  optional string mount_path = 5 [default = "/mnt/bos"];

  // Subpath of the bucket for specific job or purpose, from root by default.
  optional string input_data_path = 6;
  optional string output_data_path = 7;
}
